# EasyEngine

./: .gitignore  CMakeLists.txt  Camera.cpp  CameraController.cpp  ImageProcessing.cpp  InputHandler.cpp  JsonManipulation.cpp  JsonManipulation.h  MiniOglEngineConfig.h.in  ModelMesh.cpp  ModelMesh.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Utility.cpp  Utility.h  WindowTime.cpp  main.cpp
.VSCodeCounter/2023-12-29_22-52-33/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-12-31_17-05-50/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-01-02_22-21-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-01-02_22-21-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Data/: plane.txt
Shaders/: triangle_shader.vert
engine/: CMakeLists.txt
engine/asset/data/: light_cube_with_normal.txt  plane_indices.txt  scene.json
engine/asset/data/character/: Defeated.fbx  ske.fbx  ske2.fbx
engine/asset/data/pose/: T_pose_init.json  jiangling.json  results_3d_test1.json  results_test1.json  results_test_pose.json  world_results_3d_test1.json
engine/configs/: global_config.ini
engine/shader/: pass_through.geom  skybox.frag  skybox.vert  triangle_shader.frag  triangle_shader.vert
engine/shader/common/: animation.frag  animation.vert  depth.vert  equirect_cubemap.frag  equirect_cubemap.vert  geometry.frag  geometry.vert  geometry_view.frag  geometry_view.vert  pbr.frag  pbr.vert  point.frag  point.vert  triangle.geom  triangle.vert
engine/shader/lighting/: color.frag  color.vert  pbr_new.frag  phong.frag  phong.vert  shadow_render.frag  shadow_render.vert  shadow_render_point.frag  shadow_render_point.vert
engine/shader/postprocessing/: GaussianBlur.frag  MSAA.vert  SSAO.frag  SSAO_blur.frag  bloom_final.frag  gamma_correction.frag  gamma_correction.vert  hdr.frag  output_depth_linear.frag  output_depth_linear.vert  screen.frag  screen.vert
engine/shader/scene/: asteroid_field.frag  asteroid_field.vert
engine/shader/test/: SSAO_lighting.frag  blend_testing.frag  blend_testing.vert  bloom_light.frag  bloom_test.frag  brdf_integration.frag  cubemap_convolution.frag  cubemap_convolution_specular.frag  deferred_lighting.frag  depth_testing.frag  depth_testing.vert  exploding_objects.frag  exploding_objects.geom  geometry_testing.frag  geometry_testing.geom  geometry_testing.vert  instancing_testing.frag  instancing_testing.vert  normalmap_testing.frag  normalmap_testing.vert  parallex_testing.frag  parallex_testing.vert  reflection_testing.frag  reflection_testing.vert  stencil_single_color.frag  stencil_testing.frag  visualize_normal_vectors.frag  visualize_normal_vectors.geom  visualize_normal_vectors.vert
engine/source/runtime/: CMakeLists.txt  Camera.cpp  CameraController.cpp  Engine.cpp  Engine.h  ImageProcessing.cpp  InputHandler.cpp  JsonManipulation.cpp  ModelMesh.cpp  Shader.cpp  Texture.cpp  Utility.cpp  WindowTime.cpp  glad.c  main.cpp
engine/source/runtime/core/base/: macro.h
engine/source/runtime/core/math/: AssimpGLMHelpers.h  CoordinateMapper.h  Math.cpp  Math.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: AnimationInputManager.h
engine/source/runtime/function/render/: DeferredLightingRenderpass.cpp  DeferredLightingRenderpass.h  GeometryRenderpass.cpp  GeometryRenderpass.h  PostProcessingPass.cpp  PostProcessingPass.h  RenderPass.cpp  RenderPass.h  SkeletalAnimationRenderPass.cpp  SkeletalAnimationRenderPass.h  SkyboxRenderpass.cpp  SkyboxRenderpass.h
engine/source/runtime/function/render/basic_shape/: RenderShape.cpp  RenderShape.h
engine/source/runtime/function/render/lighting/: Colors.h  ColorsRenderPass.cpp  ColorsRenderPass.h  Light.cpp  Light.h  PhongLightingRenderPass.cpp  PhongLightingRenderPass.h  ShadowMapping.cpp  ShadowMapping.h  ShadowMappingPoint.cpp  ShadowMappingPoint.h
engine/source/runtime/function/render/postprocessing/: Bloom.cpp  Bloom.h  HDR.cpp  HDR.h  MSAA.cpp  MSAA.h
engine/source/runtime/function/render/preprocessing/: PreProcessingPass.cpp  PreProcessingPass.h
engine/source/runtime/function/render/scene/: AsteroidField.cpp  AsteroidField.h
engine/source/runtime/function/render/test/: BlendTesting.cpp  BlendTesting.h  DepthTesting.cpp  DepthTesting.h  ExplodingObjects.cpp  ExplodingObjects.h  GammaCorrectionTesting.cpp  GammaCorrectionTesting.h  GeometryTesting.cpp  GeometryTesting.h  InstancingTesting.cpp  InstancingTesting.h  NormalmapTesting.cpp  NormalmapTesting.h  PBRTesting.cpp  PBRTesting.h  ParallexTesting.cpp  ParallexTesting.h  ReflectionTesting.cpp  ReflectionTesting.h  SSAOTest.cpp  SSAOTest.h  StencilTesting.cpp  StencilTesting.h  VisualizeNormalVectors.cpp  VisualizeNormalVectors.h
engine/source/runtime/include/: Camera.h  CameraController.h  EngineWindow.h  ImageProcessing.h  InputHandler.h  JsonManipulation.h  ModelMesh.h  Shader.h  Texture.h  Utility.h  WindowTime.h
engine/source/runtime/platform/path_utility/: PathUtility.cpp  PathUtility.h
engine/source/runtime/resource/asset_manager/: AssetManager.cpp  AssetManager.h
engine/source/runtime/resource/config_manager/: ConfigManager.cpp  ConfigManager.h
engine/source/runtime/resource/res_type/common/: PostProcessingParameter.cpp  PostProcessingParameter.h
engine/source/runtime/resource/res_type/components/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
engine/source/runtime/src/: Camera.cpp  CameraController.cpp  Engine.cpp  Engine.h  EngineWindow.cpp  Engine_2.cpp  ImageProcessing.cpp  InputHandler.cpp  JsonManipulation.cpp  ModelMesh.cpp  Shader.cpp  Texture.cpp  Utility.cpp  WindowTime.cpp  main.cpp
